--- a/timerIonicApp/src/pages/list/list.html
+++ b/timerIonicApp/src/pages/list/list.html
@@ -9,6 +9,12 @@
 
 <ion-content>
   <ion-list>
+   <ion-item *ngFor="let task of tasks">
+      {{ task.dateTimeUtc | date:'dd.MM.yy hh:mm' }}
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
     <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
       <ion-icon [name]="item.icon" item-start></ion-icon>
       {{item.title}}
